[gd_scene load_steps=17 format=2]

[ext_resource path="res://dudes/Leader/Leader.tscn" type="PackedScene" id=1]
[ext_resource path="res://dudes/King/King.gd" type="Script" id=2]
[ext_resource path="res://assets/units/King/Convert_0001.png" type="Texture" id=3]
[ext_resource path="res://assets/units/King/Convert_0002.png" type="Texture" id=4]
[ext_resource path="res://assets/units/King/Convert_0003.png" type="Texture" id=5]
[ext_resource path="res://assets/units/King/blue/walk_right_0002.png" type="Texture" id=6]
[ext_resource path="res://assets/units/King/blue/walk_right_0003.png" type="Texture" id=7]
[ext_resource path="res://assets/units/King/blue/walk_right_0001.png" type="Texture" id=8]
[ext_resource path="res://assets/units/King/blue/walk_right_0004.png" type="Texture" id=9]
[ext_resource path="res://assets/units/King/red/walk_right_0002.png" type="Texture" id=10]
[ext_resource path="res://assets/units/King/red/walk_right_0003.png" type="Texture" id=11]
[ext_resource path="res://assets/units/King/red/walk_right_0004.png" type="Texture" id=12]
[ext_resource path="res://assets/units/King/red/walk_right_0001.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="King" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_health = 8
castle_damage = 4
regular_sprites = SubResource( 2 )
enemy_sprites = SubResource( 3 )

[node name="AnimatedSprite" parent="." index="2"]
frame = 0

[node name="ConvertEffect" type="AnimatedSprite" parent="AnimatedSprite" index="3"]
visible = false
frames = SubResource( 1 )

[node name="ConvertTimer" type="Timer" parent="." index="6"]
wait_time = 5.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite/ConvertEffect" to="." method="_on_ConvertEffect_animation_finished"]
[connection signal="timeout" from="ConvertTimer" to="." method="_on_ConvertTimer_timeout"]
